deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: joshlong-api
  name: joshlong-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: joshlong-api
  template:
    metadata:
      labels:
        app: joshlong-api
    spec:
      containers:
        - image: gcr.io/pgtm-jlong/joshlong-api
          imagePullPolicy: Always
          name: joshlong-api

          startupProbe:
            failureThreshold: 120
            periodSeconds: 120
            httpGet:
              port: 8080
              path: /actuator/health/readiness

          readinessProbe:
            failureThreshold: 120
            periodSeconds: 120
            httpGet:
              port: 8080
              path: /actuator/health/readiness

          livenessProbe:
            failureThreshold: 120
            periodSeconds: 120
            httpGet:
              port: 8080
              path: /actuator/health/liveness

          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "2Gi"
            requests:
              memory: "2Gi"
