deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
#    ingress.kubernetes.io/force-ssl-redirect: "true"
#    networking.gke.io/managed-certificates: "api-certificate"
    kubernetes.io/ingress.global-static-ip-name: "joshlong-com-api-ip"
  name: api-ingress
spec:
  rules:
    - host: api.joshlong.com
      http:
        paths:
          - backend:
              serviceName: api
              servicePort: 80
